--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "bold2",
+  "homepage": "https://crgarcia8.github.io/TestBold",
+  "name": "bold",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,8 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && gh-pages -d build",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "bulma": "^0.9.2",
+    "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0"
   }
 }
